tests/snapshots/codegen__codegen_PointFreeDict.snap
---
source: tests/codegen.rs
expression: js
---
import * as Data_Show from "../Data.Show/index.js";
var pointFreeAppend = "hello" + " world";
var show = /* #__PURE__ */ Data_Show.show(Data_Show.showInt);
var test = pointFreeAppend;
var pointFreeShow = /* #__PURE__ */ show(42);
var functionShow = function (x) {
    return show(x);
};
export {
    pointFreeShow,
    functionShow,
    pointFreeAppend,
    test
};
