tests/snapshots/codegen__codegen_RecordOps.snap
---
source: tests/codegen.rs
expression: js
---
var updateAge = function (p) {
    return function (newAge) {
        return {
            name: p.name,
            age: newAge
        };
    };
};
var nestedRecord = {
    inner: {
        x: 42
    }
};
var mkPerson = function (n) {
    return function (a) {
        return {
            name: n,
            age: a
        };
    };
};
var getName = function (p) {
    return p.name;
};
var getAge = function (p) {
    return p.age;
};
var emptyRecord = {};
var accessNested = function (r) {
    return r.inner.x;
};
export {
    mkPerson,
    getName,
    getAge,
    updateAge,
    emptyRecord,
    nestedRecord,
    accessNested
};
