tests/snapshots/codegen__codegen_RecordWildcards.snap
---
source: tests/codegen.rs
expression: js
---
var mkPoint = function (x) {
    return function (y) {
        return {
            x: x,
            y: y
        };
    };
};
var getX = function (p) {
    return p.x;
};
var setX = function (newX) {
    return function (p) {
        return {
            y: p.y,
            x: newX
        };
    };
};
var mkOuter = function (v) {
    return function (l) {
        return {
            inner: {
                val: v
            },
            label: l
        };
    };
};
var getInnerVal = function (o) {
    return o.inner.val;
};
export {
    getInnerVal,
    getX,
    mkOuter,
    mkPoint,
    setX
};
