tests/snapshots/codegen__codegen_ReservedWords.snap
---
source: tests/codegen.rs
expression: js
---
var let$prime = 2;
var import$prime = 3;
var default$prime = 4;
var class$prime = 1;
export {
    class$prime,
    let$prime,
    import$prime,
    default$prime
};
