tests/snapshots/codegen__codegen_SuperClassChain.snap
---
source: tests/codegen.rs
expression: js
---
import * as Data_Monoid from "../Data.Monoid/index.js";
import * as Data_Semigroup from "../Data.Semigroup/index.js";
var joinWithMonoid = function (dictMonoid) {
    return function (a) {
        return function (b) {
            return Data_Semigroup.append(dictMonoid.Semigroup0())(a)(Data_Semigroup.append(dictMonoid.Semigroup0())(Data_Monoid.mempty(dictMonoid))(b));
        };
    };
};
var test = /* #__PURE__ */ joinWithMonoid(Data_Monoid.monoidString)("hello")(" world");
export {
    joinWithMonoid,
    test
};
