tests/snapshots/codegen__codegen_SuperclassAccessor.snap
---
source: tests/codegen.rs
expression: js
---
var mySemigroupString = {
    myAppend: function (a) {
        return function (b) {
            return a;
        };
    }
};
var myMonoidString = {
    myMempty: "",
    MySemigroup0: function () {
        return mySemigroupString;
    }
};
var myAppend = function (dict) {
    return dict.myAppend;
};
var myMempty = function (dict) {
    return dict.myMempty;
};
var foldish = function (dictMyMonoid) {
    return function (x) {
        return function (y) {
            return myAppend(dictMyMonoid.MySemigroup0())(myAppend(dictMyMonoid.MySemigroup0())(x)(y))(myMempty(dictMyMonoid));
        };
    };
};
var test = /* #__PURE__ */ foldish(myMonoidString)("hello")("world");
export {
    myAppend,
    myMempty,
    mySemigroupString,
    myMonoidString,
    foldish,
    test
};
