tests/snapshots/codegen__codegen_Top.snap
---
source: tests/codegen.rs
expression: js
---
import * as Middle from "../Middle/index.js";
var topValue = Middle.middleValue;
export {
    topValue
};
